--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "axios": "^0.15.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -9,18 +10,26 @@
     "coffee-script": "^1.12.4",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "glob": "^7.1.1",
+    "js-yaml": "^3.8.2",
     "node-sass": "^4.5.1",
     "path-complete-extname": "^0.1.0",
+    "postcss-loader": "^1.3.3",
+    "postcss-smart-import": "^0.6.10",
+    "precss": "^1.4.0",
     "rails-erb-loader": "^3.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
     "vue": "^2.2.5",
     "vue-loader": "^11.3.3",
     "vue-template-compiler": "^2.2.5",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.2",
+    "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
