--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,10 @@ development:
 test:
   adapter: async
 
+# production:
+#   adapter: redis
+#   url: redis://localhost:6379/1
+#   channel_prefix: form_template_production
+
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: form_template_production
+  adapter: async
