--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,13 +1,12 @@
 development:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: form_template_development
 
 test:
   adapter: async
 
-# production:
-#   adapter: redis
-#   url: redis://localhost:6379/1
-#   channel_prefix: form_template_production
-
 production:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: form_template_production
