--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "glob": "^7.1.1",
+    "jquery": "^3.2.1",
     "js-yaml": "^3.8.2",
     "node-sass": "^4.5.1",
     "path-complete-extname": "^0.1.0",
