--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
+  "license": "UNLICENSED",
   "dependencies": {
-    "autoprefixer": "^7.1.0",
+    "autoprefixer": "^7.1.2",
     "axios": "^0.15.3",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "7.x",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.5.0",
     "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.6",
-    "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "glob": "^7.1.1",
+    "coffee-script": "^1.12.7",
+    "compression-webpack-plugin": "^1.0.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "glob": "^7.1.2",
     "jquery": "^3.2.1",
-    "js-yaml": "^3.8.4",
-    "node-sass": "^4.5.2",
+    "jquery-easing": "^0.0.1",
+    "js-yaml": "^3.9.1",
+    "lodash": "^4.17.4",
+    "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^2.0.5",
-    "postcss-smart-import": "^0.7.0",
-    "precss": "^1.4.0",
-    "rails-erb-loader": "^5.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-smart-import": "^0.7.5",
+    "precss": "^2.0.0",
+    "prop-types": "^15.5.10",
+    "rails-erb-loader": "^5.1.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "sortablejs": "^1.5.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
     "vue": "^2.2.5",
     "vue-loader": "^11.3.3",
+    "vue-strap": "^1.1.37",
     "vue-template-compiler": "^2.2.5",
-    "webpack": "^2.5.1",
-    "webpack-manifest-plugin": "^1.1.0",
+    "webpack": "^3.5.4",
+    "webpack-manifest-plugin": "^1.3.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.7.1"
   }
 }
