--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.5.0",
+    "chroma-js": "^1.3.4",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.7",
     "compression-webpack-plugin": "^1.0.0",
