[chore] credentials に移行

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ config/secrets.yml.key
 /public/packs
 /public/packs-test
 /node_modules
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
