--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-loader": "^11.3.3",
     "vue-strap": "^1.1.37",
     "vue-template-compiler": "^2.2.5",
+    "vuedraggable": "^2.16.0",
     "webpack": "^3.5.4",
     "webpack-manifest-plugin": "^1.3.0",
     "webpack-merge": "^4.1.0"
